# nektar

./: Cargo.toml  LICENSE  README.md  metastore.sh  rust-toolchain.toml
.github/workflows/: build.yml  release.yml
resources/test/: table.json
src/: cli.rs  error.rs  fb303.rs  hive_metastore.rs  lib.rs  main.rs
src/cmds/: catalogs.rs  databases.rs  mod.rs  partitions.rs  tables.rs
tests/: integration_test.rs
tests/predicates/: json.rs  mod.rs  yaml.rs
