[package]
name = "nektar"
version = "0.0.7"
edition = "2018"
license-file = "LICENSE"
description = "A fast, lightweight CLI for Hive Metastore"
repository = "https://github.com/DeaconDesperado/nektar"
readme = "README.md"
keywords = ["hive", "metastore"]
categories = ["command-line-utilities"]

[dependencies]
env_logger = "0.10.2"
log = "0.4.22"
ordered-float = "4.2.1"
try_from = "0.3.2"
thrift = "0.17.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0.63"
console = "0.15.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = { version = "0.9.34", optional = true }
assert_cmd = "2.0.14"
dialoguer = "0.11.0"

[dev-dependencies]
env_logger = "0.10.2"
predicates = "3.1.2"

[features]
default = ["yaml"]
yaml = ["dep:serde_yaml"]
