[package]
name = "nektar"
version = "0.0.9"
edition = "2018"
license-file = "LICENSE"
description = "A fast, lightweight CLI for Hive Metastore"
repository = "https://github.com/DeaconDesperado/nektar"
readme = "README.md"
keywords = ["hive", "metastore"]
categories = ["command-line-utilities"]

[dependencies]
env_logger = "0.11.6"
log = "0.4.27"
ordered-float = "5.0.0"
try_from = "0.3.2"
thrift = "0.17.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0.16"
console = "0.16.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = { version = "0.9.34", optional = true }
assert_cmd = "2.0.17"
dialoguer = "0.12.0"

[dev-dependencies]
env_logger = "0.11.6"
predicates = "3.1.3"

[features]
default = ["yaml"]
yaml = ["dep:serde_yaml"]
